tapif example now uses custom pbufs

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -10,6 +10,7 @@ PORTDIR = ../ports/os/unix
 SOURCES := \
 	$(SRCDIR)/netif/tapif.c \
 	$(SRCDIR)/test.c \
+	$(SRCDIR)/custom_pbuf.c \
 	$(SRCDIR)/udpecho.c \
 	$(SRCDIR)/default_netif.c \
 	$(PORTDIR)/perf.c \
